[package]
name = "basilk_pe"
version = "0.1.0"
edition = "2021"
description = "A Terminal User Interface (TUI) to manage your pe tasks with minimal kanban logic"
license = "MIT OR Apache-2.0"
authors = ["Stanik"]
readme = "README.md"
homepage = "https://github.com/lxvevery1/basilk_pe"
repository = "https://github.com/lxvevery1/basilk_pe"
keywords = ["tui", "kanban", "tasks", "ratatui", "terminal"]
categories = ["command-line-utilities"]
default-run = "basilk_pe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
toml = "0.8.19"
tui-input = "0.9.0"
